--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <input type="text" id="user_name" class="form_control" placeholder="user_name">
 		</div>
 
-		<button id="login_button" class="btn btn-primary" onclick = "adduser()">Log in </button> 
+		<button id="login_button" class="btn btn-success" onclick = "adduser()">Log in </button> 
 		<br><br>
 	</div>
 </center>
